<resources>
    <string name="app_name">GnssPositionApp</string>

    <string name="snack_bar_saving">保存中です</string>
    <string name="snack_bar_save_finished">保存完了しました</string>
    <string name="snack_bar_send_finished">送信完了しました</string>
    <string name="snack_bar_send_error">送信失敗しました</string>

    <string name="app_title">Gnss\nPosition\nApp</string>
    <string name="toolbar_start_title">スタート画面</string>
    <string name="btn_navigate_to_measure">位置を測定する</string>
    <string name="btn_navigate_to_list">一覧を表示する</string>
    <string name="btn_navigate_to_send">Slackに送信</string>

    <string name="edit_txt_file_title_hint">位置名称を入力してください</string>
    <string name="loading_txt">測定中です</string>
    <string name="tv_location_cnt">現在%1$d個取得しました</string>
    <string name="tv_average">精度の平均: %1$.2f m</string>
    <string name="toolbar_measure_title">測定画面</string>
    <string name="btn_finish">測定終了</string>
    <string name="dialog_desc">測定を中止して開始画面に戻りますか?</string>
    <string name="dialog_negative">測定を続ける</string>
    <string name="dialog_positive">戻る</string>

    <string name="tv_date">時刻: %1$s</string>
    <string name="tv_longitude">経度: %1$.2f 度</string>
    <string name="tv_latitude">緯度: %1$.2f 度</string>
    <string name="tv_accuracy_meter">精度: %1$.2f m</string>
    <string name="tv_accuracy_yard">精度: %1$.2f yard</string>
    <string name="tv_diff_meter">前回採取点との距離: %1$.2f m</string>
    <string name="tv_diff_yard">前回採取点との距離: %1$.2f yard</string>
    <string name="tv_again">測定する</string>
    <string name="unit_convert">単位変換(m ⇔ yard)</string>
    <string name="btn_save">保存</string>
    <string name="toolbar_list_title">測定結果一覧</string>

    <string name="notification_channel_name">バックグラウンドで測量</string>
    <string name="notification_title">測量中</string>
    <string name="notification_remove">取り消し</string>
    <string name="notification_content">現在バックグラウンドで測定中です</string>
    <string name="toolbar_file_send_title">ファイル送信</string>
    <string name="btn_send">送信</string>
    <string name="btn_delete">削除</string>
    <string name="settings">設定</string>
    <string name="snack_bar_share">2つ以上のファイルは共有できません</string>

</resources>