<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_gnss_app"
    app:startDestination="@id/start_fragment">

    <fragment
        android:id="@+id/start_fragment"
        android:name="com.example.gnsspositionapp.ui.start.StartFragment"
        android:label="@string/toolbar_start_title" >

        <action
            android:id="@+id/start_to_measure"
            app:destination="@id/measure_fragment"
            app:enterAnim="@anim/slide_from_bottom"
            app:exitAnim="@anim/slide_to_top"
            app:popEnterAnim="@anim/slide_from_top"
            app:popExitAnim="@anim/slide_to_bottom"/>

        <action
            android:id="@+id/start_to_list"
            app:destination="@id/location_list_fragment"
            app:enterAnim="@anim/slide_from_bottom"
            app:exitAnim="@anim/slide_to_top"
            app:popEnterAnim="@anim/slide_from_top"
            app:popExitAnim="@anim/slide_to_bottom"/>

        <action
            android:id="@+id/start_to_send"
            app:destination="@id/file_send_fragment"
            app:enterAnim="@anim/slide_from_right"
            app:exitAnim="@anim/slide_to_left"
            app:popEnterAnim="@anim/slide_from_left"
            app:popExitAnim="@anim/slide_to_right" />


    </fragment>

    <fragment
        android:id="@+id/measure_fragment"
        android:name="com.example.gnsspositionapp.ui.measure.MeasureFragment"
        android:label="@string/toolbar_measure_title"
        >

        <action
            android:id="@+id/start_to_measure"
            app:destination="@id/measure_fragment"
            app:enterAnim="@anim/slide_from_bottom"
            app:exitAnim="@anim/slide_to_top"
            app:popEnterAnim="@anim/slide_from_top"
            app:popExitAnim="@anim/slide_to_bottom"/>

        <action
            android:id="@+id/measure_to_list"
            app:destination="@id/location_list_fragment"
            app:popUpTo="@id/start_fragment"
            app:enterAnim="@anim/slide_from_right"
            app:exitAnim="@anim/slide_to_left"
            app:popEnterAnim="@anim/slide_from_top"
            app:popExitAnim="@anim/slide_to_bottom"/>

    </fragment>
    <fragment
        android:id="@+id/location_list_fragment"
        android:name="com.example.gnsspositionapp.ui.list.LocationListFragment"
        android:label="@string/toolbar_list_title" >


        <action
            android:id="@+id/location_to_measure"
            app:destination="@id/measure_fragment"
            app:popUpTo="@id/start_fragment"
            app:enterAnim="@anim/slide_from_left"
            app:exitAnim="@anim/slide_to_right"
            app:popEnterAnim="@anim/slide_from_top"
            app:popExitAnim="@anim/slide_to_bottom"/>

    </fragment>

    <fragment
        android:id="@+id/file_send_fragment"
        android:name="com.example.gnsspositionapp.ui.send.FileSendFragment"
        android:label="@string/toolbar_file_send_title"/>

    <fragment
        android:id="@+id/settings_fragment"
        android:name="com.example.gnsspositionapp.ui.settings.SettingsFragment"
        android:label="@string/settings"/>
</navigation>